Policy-Networking-Calico/NetworkPolicy/Policy_CNI_3/allow-same-namespace.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: allow-same-namespace-only
  namespace: production
spec:
  order: 101.0
  selector: app == 'db'
  types:
    - Ingress
  ingress:
    - action: Allow
      source:
        namespaceSelector: projectcalico.org/name == "production"
