Policy-Networking-Calico/NetworkPolicy/Policy_CNI_3/default-deny.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: production
spec:
  order: 100.0
  selector: all()
  types:
  - Ingress
  - Egress
  ingress:
  - action: Allow
    protocol: UDP
    source:
      selector: k8s-app == "kube-dns"
    destination:
      ports:
        - 53
  - action: Deny
    source: {}
    destination: {}

  egress:
  - action: Allow
    protocol: UDP
    destination:
      selector: k8s-app == "kube-dns"
      ports:
        - 53
  - action: Deny
    source: {}
    destination: {}
