Policy-Networking-Calico/NetworkPolicy/Policy_CNI_3/deny-all-to-db.yaml
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: deny-attacker-to-db
spec:
  order: 50.0
  selector: app == 'db'
  ingress:
    - action: Deny
      source:
        selector: app == 'attacker'
  types:
    - Ingress
